# selective-disclosure-benchmark

./: .gitignore  LICENSE  README.md
benches/dock_benchmark/: Cargo.toml  README.md
benches/dock_benchmark/benches/bbs/: bbs_keygen.rs  bbs_proof.rs  bbs_signature.rs
benches/dock_benchmark/benches/bbs_plus/: bbs_plus_keygen.rs  bbs_plus_proof.rs  bbs_plus_signature.rs
benches/dock_benchmark/src/: lib.rs
benches/merkle_benchmark/: Cargo.toml  README.md
benches/merkle_benchmark/benches/dilithium/: dilithium_keygen.rs  dilithium_proof.rs  dilithium_signature.rs
benches/merkle_benchmark/benches/eddsa/: eddsa_keygen.rs  eddsa_proof.rs  eddsa_signature.rs
benches/merkle_benchmark/benches/falcon/: falcon_keygen.rs  falcon_proof.rs  falcon_signature.rs
benches/merkle_benchmark/benches/sphincs/: sphincs_keygen.rs  sphincs_proof.rs  sphincs_signature.rs
benches/merkle_benchmark/src/: lib.rs  merkle_rand_summary.py
benches/ursa_benchmark/: .gitignore  Cargo.toml  README.md
benches/ursa_benchmark/benches/cl/: cl_keygen.rs  cl_proof.rs  cl_signature.rs  prime.rs
benches/ursa_benchmark/benches/ps/: ps_keygen.rs  ps_proof.rs  ps_signature.rs
benches/ursa_benchmark/cl/: constants.rs  issuer.rs  mod.rs  prover.rs
benches/ursa_benchmark/src/: lib.rs  prime_repeat.py
matplotlib/: Algorithm.py  issuing_scatter.py  key_vs_holder_proof.py  keygen_scatter.py  plot_Presentation_single.py  presentation_proof_size.py  presentation_scatter.py  requirements.txt  sds_size.py
matplotlib/pplt_settings/: mplstyle_two_column.mplstyle
matplotlib/sets/: bbs bls12-381-sha-256.toml  bbs+.toml  bbs.toml  cl.toml  dilithium.toml  ecdsa.toml  eddsa.toml  falcon.toml  ps.toml  rsa.toml  sphincs-fast.toml  sphincs-short.toml  sphincs.toml
