[package]
name = "dock_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbs_plus = "0.16.0"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-std = "0.4.0"
blake2 = { version = "0.10", default-features = false }
rand = "~0.8"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bbs_keygen"
path = "benches/bbs/bbs_keygen.rs"
harness = false

[[bench]]
name = "bbs_signature"
path = "benches/bbs/bbs_signature.rs"
harness = false

[[bench]]
name = "bbs_proof"
path = "benches/bbs/bbs_proof.rs"
harness = false

[[bench]]
name = "bbs_plus_keygen"
path = "benches/bbs_plus/bbs_plus_keygen.rs"
harness = false

[[bench]]
name = "bbs_plus_signature"
path = "benches/bbs_plus/bbs_plus_signature.rs"
harness = false

[[bench]]
name = "bbs_plus_proof"
path = "benches/bbs_plus/bbs_plus_proof.rs"
harness = false
